# WavesAccelerated

./: CMakeLists.txt  README.md  kernel.cu  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  wrapper.h
